# seekX

./: Cargo.toml  LICENSE  README.md
src/: desktop.rs  launcher.rs  main.rs  search.rs  ui.rs
src/application/: mod.rs
src/domain/: desktop_app.rs  mod.rs  search.rs
src/infrastructure/: browser.rs  desktop.rs  fs_index.rs  mod.rs
src/settings/: mod.rs
src/ui/: mod.rs  styles.rs
