[package]
name = "seekX"
version = "0.1.0"
edition = "2024"

[features]
default = []
layer-shell = ["dep:gtk4-layer-shell"]

[dependencies]
dirs = "6.0"
gtk4 = "0.8"
gtk4-layer-shell = { version = "0.3", optional = true }
shlex = "1.3"
urlencoding = "2.1"
walkdir = "2.5"
webbrowser = "1.0"
which = "7.0"
